[gd_scene load_steps=18 format=3 uid="uid://d7bnmtuohln8"]

[ext_resource type="Script" path="res://scenes/ui/ability_upgrade_card.gd" id="1_j5g26"]
[ext_resource type="PackedScene" uid="uid://cg07t64teu1ye" path="res://scenes/component/random_stream_player_component.tscn" id="2_koj0i"]
[ext_resource type="AudioStream" uid="uid://bx5iclkwpa0xo" path="res://assets/audio/Card Drop 1.wav" id="3_d38es"]
[ext_resource type="AudioStream" uid="uid://chr2wf1lurrno" path="res://assets/audio/Card Drop 2.wav" id="4_hc70u"]
[ext_resource type="AudioStream" uid="uid://y43aax41aqks" path="res://assets/audio/Card Drop 3.wav" id="5_2mfp4"]
[ext_resource type="AudioStream" uid="uid://bjjyvmp2bayfs" path="res://assets/audio/Card Hover 1.wav" id="6_85sj2"]
[ext_resource type="AudioStream" uid="uid://cpvrmbs5merwn" path="res://assets/audio/Card Hover 2.wav" id="7_cj40f"]
[ext_resource type="AudioStream" uid="uid://htngh01wdobg" path="res://assets/audio/Card Hover 3.wav" id="8_nd5c7"]
[ext_resource type="AudioStream" uid="uid://dg72x1lqxvjap" path="res://assets/audio/Card Select 1.wav" id="9_dmsk3"]
[ext_resource type="AudioStream" uid="uid://b2s4vg88slrcr" path="res://assets/audio/Card Select 2.wav" id="10_o1683"]
[ext_resource type="AudioStream" uid="uid://cxk5juh7x6y1c" path="res://assets/audio/Card Select 3.wav" id="11_mjb3m"]

[sub_resource type="Animation" id="Animation_k1gn6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/VBoxContainer:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_kxng0"]
resource_name = "discard"
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333, 0.875, 0.916667, 0.958333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(3.13202, -22.0293), Vector2(9.87654, -67.284), Vector2(18.7973, -124.479), Vector2(28.9001, -185.802), Vector2(39.6219, -248.359), Vector2(50, -300), Vector2(59.1114, -328.735), Vector2(67.158, -338.134), Vector2(74.3148, -330.984), Vector2(80.5954, -308.44), Vector2(85.9941, -270.922), Vector2(90.5632, -220.26), Vector2(94.3304, -157.385), Vector2(97.3514, -84.3883), Vector2(99.6527, -2.26651), Vector2(101.304, 86.3867), Vector2(102.337, 180.393), Vector2(102.842, 276.37), Vector2(102.897, 348.819), Vector2(102.513, 465.218), Vector2(101.839, 555.879), Vector2(101.097, 623.866), Vector2(100.379, 676.437), Vector2(100, 700)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333, 0.875, 0.916667, 0.958333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1.86607),
"update": 1,
"values": [0.0, 0.15357, 0.515115, 1.00661, 1.66379, 2.54542, 3.57054, 4.66215, 5.83539, 7.11045, 8.46727, 9.89367, 11.3727, 12.8965, 14.4438, 16.0045, 17.5527, 19.0766, 20.5423, 21.5952, 23.2093, 24.405, 25.2629, 25.9026, 26.1799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(0.994936, 0.994936), Vector2(0.983369, 0.983369), Vector2(0.965605, 0.965605), Vector2(0.94197, 0.94197), Vector2(0.912802, 0.912802), Vector2(0.878457, 0.878457), Vector2(0.849827, 0.849827), Vector2(0.81494, 0.81494), Vector2(0.774295, 0.774295), Vector2(0.728427, 0.728427), Vector2(0.677904, 0.677904), Vector2(0.62334, 0.62334), Vector2(0.565396, 0.565396), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ryoaf"]
resource_name = "hover"
length = 0.6666
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833, 0.166667, 0.25, 0.3333, 0.416667, 0.5, 0.583333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, 0.0610865, 0.0872665, 0.0610865, 0.0, -0.0610865, -0.0872665, -0.0610865, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, -10), Vector2(0, -15), Vector2(0, -20), Vector2(0, -14.999), Vector2(0, -9.998), Vector2(0, -4.997), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4xccp"]
resource_name = "start"
length = 0.583342
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333),
"transitions": PackedFloat32Array(1.68179, 1, 1, 1, 1, 1, 1, 1, 0.392292, 1, 1, 1, 0.482969, 1, 0.757858),
"update": 1,
"values": [Vector2(0, -750), Vector2(0, -753.441), Vector2(0, -730.234), Vector2(0, -640.486), Vector2(0, -510.583), Vector2(0, -356.102), Vector2(0, -200.674), Vector2(0, -50.7379), Vector2(0, 50), Vector2(0, -0.659775), Vector2(0, -12.6737), Vector2(0, -22.1449), Vector2(0, -25), Vector2(0, -3.38072), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333),
"transitions": PackedFloat32Array(1.68179, 1, 1, 1, 1, 1, 1, 1, 0.392292, 1, 1, 1, 0.482968, 1, 0.757858),
"update": 1,
"values": [0.0, 0.00396395, 0.0127174, 0.0324144, 0.0521115, 0.0718086, 0.0915056, 0.111203, 0.1309, -0.0490808, -0.0861689, -0.108534, -0.1309, -0.0311635, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.583333),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"show"
}, {
"args": [],
"method": &"enable"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0416667),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("DropRandomStreamPlayer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="Animation" id="Animation_5c43a"]
resource_name = "selected"
length = 0.583342
step = 0.0416667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1.02991, 1.02991), Vector2(1.08728, 1.08728), Vector2(1.15384, 1.15384), Vector2(1.21967, 1.21967), Vector2(1.28135, 1.28135), Vector2(1.32255, 1.32255), Vector2(1.34316, 1.34316), Vector2(1.3, 1.3), Vector2(1.13944, 1.13944), Vector2(0.907296, 0.907296), Vector2(0.623656, 0.623656), Vector2(0.350393, 0.350393), Vector2(0.115053, 0.115053), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, 0.0327249, 0.0654498, 0.0981748, 0.1309, 0.163625, 0.19635, 0.229074, 0.261799, -0.305433, -0.872665, -1.4399, -2.00713, -2.57436, -3.14159]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SelectRandomStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rim2b"]
_data = {
"RESET": SubResource("Animation_k1gn6"),
"discard": SubResource("Animation_kxng0"),
"hover": SubResource("Animation_ryoaf"),
"pop-up": SubResource("Animation_4xccp"),
"selected": SubResource("Animation_5c43a")
}

[node name="AbilityUpgradeCard" type="PanelContainer" groups=["upgrade_card"]]
custom_minimum_size = Vector2(300, 250)
offset_right = 300.0
offset_bottom = 250.0
pivot_offset = Vector2(150, 125)
script = ExtResource("1_j5g26")

[node name="DropRandomStreamPlayer" parent="." instance=ExtResource("2_koj0i")]
volume_db = 10.0
streams = Array[AudioStream]([ExtResource("3_d38es"), ExtResource("4_hc70u"), ExtResource("5_2mfp4")])

[node name="HoverRandomStreamPlayer" parent="." instance=ExtResource("2_koj0i")]
streams = Array[AudioStream]([ExtResource("6_85sj2"), ExtResource("7_cj40f"), ExtResource("8_nd5c7")])

[node name="SelectRandomStreamPlayer" parent="." instance=ExtResource("2_koj0i")]
streams = Array[AudioStream]([ExtResource("9_dmsk3"), ExtResource("10_o1683"), ExtResource("11_mjb3m")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rim2b")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "test name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 16
text = "test description"
autowrap_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
